fixed scrollbars

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,46 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Passion+One:wght@400;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Passion+One:wght@400;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @font-face {
-    font-family: Futura;
-    src: url('../../public/fonts/Futura\ Std\ Extra\ Bold.ttf');
+  font-family: Futura;
+  src: url("../../public/fonts/Futura\ Std\ Extra\ Bold.ttf");
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.link{
-    @apply text-lg font-urbanist font-medium tracking-wide  flex
+.link {
+  @apply text-lg font-urbanist font-medium tracking-wide  flex;
 }
 
-/* body{
-    width: 100vw !important;
+::-webkit-scrollbar-thumb {
+  background-color: #989797 !important;
 }
 
-._next {
-    background-color: #2b7eb5;
-} */
-
-::-webkit-scrollbar {
-    background-color: transparent !important;
-    width: 10px;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: gray;
 }
 
-::-webkit-scrollbar-track{
-    width: 10px;
-    background-color: transparent !important;
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
 }
 
-::-webkit-scrollbar-thumb{
-    background-color: #747474 !important;
-}
-
-body::-webkit-scrollbar{
-    background-color: transparent !important;
-    width: 10px ;
-}
-
-body::-webkit-scrollbar-thumb{
-    background-color: #696969 !important;
+*::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 4px;
 }
